Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-3417

New Qt Quick UI Project wizard: File name case mismatch due to case tolerant project location in wizard. (Windws)

XMLWordPrintable

    • e414335f26986d8786a6a158e5b9c6

      I have an existing folder c:\MyProjects. Now, I use the "New Qt Quick UI Project" wizard, and manually insert a project location c:\myprojects (note the case mismatch). When I launch the QmlViewer, I get this error message:

      Starting C:\git\qt\bin\qmlviewer.exe -I C:/git/qt/imports C:/myprojects/untitled1/untitled1.qml
      file:///C:/myprojects/untitled1/untitled1.qml: File name case mismatch

      ... and the qml file content is not shown in the viewer.

      See attached screenshot.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes