Fix capitalization problems with qmlviewer

qmlviewer is picky about file path capitalization, and will bail out with
'File name case mismatch' if e.g. the working directory is wrongly
capitalized. Prevent this by computing the canonical path of
the qml file + working directory in advance.

Reviewed-by: Alessandro Portale
Task-number: QTCREATORBUG-3417